--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <label>E-mail: <input type="email" /></label>
             <br>
             <br>
-            <textarea id="mensaje" name="mensaje" rows="4" cols="50" required> Escriba su mensaje: </textarea><br><br>
+            <textarea name="mensaje" rows="4" cols="40" required> Escriba su mensaje: </textarea><br><br>
         
         <button type="submit">Contactar</button>
         </section>
