--- a/index.html
+++ b/index.html
@@ -7,57 +7,29 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <header class="main-name">
-        <h2>Maira Alejandra</h2>   
-        <h1>Mendoza Grisales</h1>
-        <br/>
-        <h3>Desarrollador Web</h3>
+    <div class="gridone">
+    <header>
+        <img id="imgone"src="./imagenes/mifoto.jpg" alt="Mi foto" />
+        <h2 class="name-one">Maira Alejandra</h2>   
+        <h1 class="name-two">Mendoza Grisales</h1>
+        <h3 class="profession">D e s a r r o l l a d o r   W e b</h3>
         </header>
-    <main>
-        <section>
-            <h2>Perfil profesional</h2>
-            <p>Soy Licenciada en Educación Básica con un énfasis en Lengua Extranjera: Inglés y actualmente, soy estudiante de técnico en desarrollo web. Tengo la capacidad de establecer y mantener una excelente comunicación y relación con los clientes, soy organizada y tengo una gestión eficaz del tiempo, me destaco por mi facilidad de adaptación, disciplina y responsabilidad, así como por mi disposición a adquirir nuevos conocimientos y habilidades. </p>
-            <br>
-            <h2>Educación</h2>
-            <ul>
-                <li>Licenciatura en educación básica con énsasis en Lenguas Extranjeras, <i>Unidad Central del Valle (2020)</i></li>
-                <li>Diplomado en servicio y comunicación con el cliente, <i> Politécnico Superior de Colombia (2022)</i></li>
-                <li>Técnico en desarrollo web, <i>Protalento (en curso)</i></li>
-            </ul>
-            <h2>Experiencia</h2>
-            <h3><strong>Colegio San Juan de la Loma</strong></h3>
-            <ul>
-                <li><strong>Cargo:</strong><i> Docente</i></li>
-                <li><strong>Fecha de inicio:</strong><i> Julio 2023 - actualmente</i></li>
-            </ul>
-            <h3><strong>Servilentes Ltda.</strong></h3>
-            <ul>
-                <li><strong>Cargo:</strong><i> Auxiliar de oficina</i></li>
-                <li><strong>Fecha de inicio:</strong><i> Junio 2021</i></li>
-                <li><strong>Fecha de fin:</strong> <i>Marzo 2022</i></li>
-            </ul>
-        </section>
-        </main>
         <aside>
-        <section>
+        <section class="aside">
     <h2>Contacto</h2>
     <ul>
-        <li><strong>Email:</strong> mai951810@gmail.com</li>
-        <li><strong>Teléfono:</strong> 316 243 7157</li>
-        <li><strong>Ubicación:</strong> Tuluá, Colombia</li>
-        <li><strong><a href="https://github.com/Mairaamg" title="Mi repositorio"> Github</a></strong></li>
-        <li><strong><a href="https://www.linkedin.com/in/mairaamg/"> LinkedIn</a></strong></li>
+        <li class="listone"><img class="img"src="./imagenes/icon-email.png" alt=""><strong>Email:</strong> mai951810@gmail.com</li>
+        <li class="listone"><img class="img" src="imagenes/⁪icon-tel.png" alt=""><strong>Teléfono:</strong> 316 243 7157</li>
+        <li class="listone"><img class="img" src="./imagenes/location-icon.png" alt=""><strong>Ubicación:</strong> Tuluá, Colombia</li>
+        <li class="listone"><img class="img" src="./imagenes/github-icon.png" alt=""><strong><a href="https://github.com/Mairaamg" target="_blank" title="Mi repositorio"> Github</a></strong></li>
+        <li class="listone"><img class="img" src="./imagenes/linkedin-icon.png" alt=""><strong><a href="https://www.linkedin.com/in/mairaamg/" target="_blank"> LinkedIn</a></strong></li>
     </ul>
         </section>
-        <section>
-           
-        </section>
-        <section>
+        <section class="aside">
             <h2>Habilidades</h2>
-            <table border="1" cellspacing="1" cellpadding="1">
+            <table class="table" border="1" cellspacing="2" cellpadding="2">
                 <tr>
-                    <th colspan="6"><i>Habilidades que me gustaría alcanzar</i></th>
-
+                    <th colspan="6">Habilidades que me gustaría alcanzar</th>
                 </tr>
                 <tr>
                     <td>HTML</td>
@@ -69,31 +41,64 @@
                 </tr>
             </table>
         </section>
-        <section>
+        <section class="aside">
             <h2>Intereses</h2>
-            <table border="1" cellspacing="1" cellpadding="1">
+            <table class="table" border="1" cellspacing="2" cellpadding="2">
                 <tr>
-                    <th colspan="4"><i>Mis Intereses</i></th>
-
+                    <th colspan="4">Mis intereses</th>
                 </tr>
                 <tr>
-                    <td>Fullstack</td>
+                    <td>SCRUM</td>
                     <td>SEO</td>
                     <td>Páginas web</td>
                     <td>Otros por descubrir</td>
                 </tr>
-                </table>
+            </table>
         </section>
         <section>
-            <br>
-
-            <label>E-mail: <input type="email" /></label>
-            <br>
-            <br>
-            <textarea name="mensaje" rows="4" cols="40" required> Escriba su mensaje: </textarea><br><br>
-        
-        <button type="submit">Contactar</button>
-        </section>
     </aside>
+    </div>
+    <div class="gridtwo">
+    <main>
+
+        <section class="main-part">
+            <br>
+            <h2>Perfil profesional</h2>
+            <p>Soy Licenciada en Educación Básica con un énfasis en Lengua Extranjera: Inglés. Actualmente, soy estudiante de técnico en desarrollo web. Tengo la capacidad de establecer y mantener una excelente comunicación y relación con los clientes, soy organizada y tengo una gestión eficaz del tiempo, me destaco por mi facilidad de adaptación, disciplina y responsabilidad, así como por mi disposición a adquirir nuevos conocimientos y habilidades. </p>
+            <br>
+            <h2>Educación</h2>
+            <ul>
+                <li class="listwo">Licenciatura en educación básica con énsasis en Lenguas Extranjeras,  Unidad Central del Valle (2020)</li>
+                <li class="listwo">Diplomado en servicio y comunicación con el cliente,  Politécnico Superior de Colombia (2022)</li>
+                <li class="listwo">Técnico en desarrollo web, Protalento (en curso)</li>
+            </ul>
+            <h2>Experiencia</h2>
+            <h3 class="job"><strong>Colegio San Juan de la Loma</strong></h3>
+            <ul>
+                <li class="listwo"><strong>Cargo:</strong><i> Docente</i></li>
+                <li class="listwo"><strong>Fecha de inicio:</strong><i> Julio 2023 - actualmente</i></li>
+            </ul>
+            <h3 class="job"><strong>Servilentes Ltda.</strong></h3>
+            <ul>
+                <li class="listwo"><strong>Cargo:</strong><i> Auxiliar de oficina</i></li>
+                <li class="listwo"><strong>Fecha de inicio:</strong><i> Junio 2021</i></li>
+                <li class="listwo"><strong>Fecha de fin:</strong> <i>Marzo 2022</i></li>
+            </ul>
+            <h2>Cursos</h2>
+            <ul>
+                <li class="listwo">HTML y CSS, Platzi</li>
+                <li class="listwo">CRM con Salesforce, Platzi </li>
+                <li class="listwo">Introducción al CRM con Hubspot,  Coursera </li>
+                <li class="listwo">Competencias digitales de ofimática: Microsoft Excel,   Coursera</li>
+            </ul>
+            <h2>Idiomas</h2>
+            <ul>
+                <li class="listwo">Español - Nativo</li>
+                <li class="listwo">Inglés - Intermedio </li>
+
+            </ul>
+        </section>
+        </main>
+    </div>
 </body>
 </html>
