Mi hoja de vida para entregar

--- a/index.html
+++ b/index.html
@@ -18,49 +18,40 @@
         <section class="aside">
     <h2>Contacto</h2>
     <ul>
-        <li class="listone"><img class="img"src="./imagenes/icon-email.png" alt=""><strong>Email:</strong> mai951810@gmail.com</li>
-        <li class="listone"><img class="img" src="imagenes/⁪icon-tel.png" alt=""><strong>Teléfono:</strong> 316 243 7157</li>
-        <li class="listone"><img class="img" src="./imagenes/location-icon.png" alt=""><strong>Ubicación:</strong> Tuluá, Colombia</li>
+        <li class="listone"><img class="img"src="./imagenes/icon-email.png" alt=""> mai951810@gmail.com</li>
+        <li class="listone"><img class="img" src="imagenes/⁪icon-tel.png" alt=""> 316 243 7157</li>
+        <li class="listone"><img class="img" src="./imagenes/location-icon.png" alt=""> Tuluá, Colombia</li>
         <li class="listone"><img class="img" src="./imagenes/github-icon.png" alt=""><strong><a href="https://github.com/Mairaamg" target="_blank" title="Mi repositorio"> Github</a></strong></li>
         <li class="listone"><img class="img" src="./imagenes/linkedin-icon.png" alt=""><strong><a href="https://www.linkedin.com/in/mairaamg/" target="_blank"> LinkedIn</a></strong></li>
     </ul>
         </section>
         <section class="aside">
-            <h2>Habilidades</h2>
-            <table class="table" border="1" cellspacing="2" cellpadding="2">
-                <tr>
-                    <th colspan="6">Habilidades que me gustaría alcanzar</th>
-                </tr>
-                <tr>
-                    <td>HTML</td>
-                    <td>CSS</td>
-                    <td>JavaScript</td>
-                    <td>PHP</td>
-                    <td>Java</td>
-                    <td>Python</td>
-                </tr>
-            </table>
+            <h2>Habilidades a alcanzar</h2>
+                <ul class="listwo">
+                    
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>JavaScript</li>
+                    <li>PHP</li>
+                    <li>Java</li>
+                    <li>Python</li>
+                </ul>
         </section>
         <section class="aside">
             <h2>Intereses</h2>
-            <table class="table" border="1" cellspacing="2" cellpadding="2">
-                <tr>
-                    <th colspan="4">Mis intereses</th>
-                </tr>
-                <tr>
-                    <td>SCRUM</td>
-                    <td>SEO</td>
-                    <td>Páginas web</td>
-                    <td>Otros por descubrir</td>
-                </tr>
-            </table>
+                <ul class="listwo">
+                    <li>SCRUM</li>
+                    <li>Programación</li>
+                    <li>Grid</li>
+                    <li>Media queries</li>
+                    <li>Habilidades blandas</li>
+                </ul>
         </section>
         <section>
     </aside>
     </div>
     <div class="gridtwo">
     <main>
-
         <section class="main-part">
             <br>
             <h2>Perfil profesional</h2>
@@ -68,9 +59,9 @@
             <br>
             <h2>Educación</h2>
             <ul>
-                <li class="listwo">Licenciatura en educación básica con énsasis en Lenguas Extranjeras,  Unidad Central del Valle (2020)</li>
-                <li class="listwo">Diplomado en servicio y comunicación con el cliente,  Politécnico Superior de Colombia (2022)</li>
-                <li class="listwo">Técnico en desarrollo web, Protalento (en curso)</li>
+                <li class="listwo">Licenciatura en educación básica con énsasis en Lenguas Extranjeras,  <i> Unidad Central del Valle (2020)</i></li>
+                <li class="listwo">Diplomado en servicio y comunicación con el cliente,  <i>Politécnico Superior de Colombia (2022)</i></li>
+                <li class="listwo">Técnico en desarrollo web, <i>Protalento (en curso)</i></li>
             </ul>
             <h2>Experiencia</h2>
             <h3 class="job"><strong>Colegio San Juan de la Loma</strong></h3>
@@ -86,10 +77,10 @@
             </ul>
             <h2>Cursos</h2>
             <ul>
-                <li class="listwo">HTML y CSS, Platzi</li>
-                <li class="listwo">CRM con Salesforce, Platzi </li>
-                <li class="listwo">Introducción al CRM con Hubspot,  Coursera </li>
-                <li class="listwo">Competencias digitales de ofimática: Microsoft Excel,   Coursera</li>
+                <li class="listwo">HTML y CSS, <i>Platzi</i></li>
+                <li class="listwo">CRM con Salesforce, <i>Platzi</i> </li>
+                <li class="listwo">Introducción al CRM con Hubspot,  <i>Coursera</i> </li>
+                <li class="listwo">Competencias digitales de ofimática: Microsoft Excel,   <i>Coursera</i></li>
             </ul>
             <h2>Idiomas</h2>
             <ul>
